Fixed skrollr adding whitespace to pages

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -41,6 +41,7 @@ h6 {
 p,
 li {
   font-family: $font-stack;
+  font-size: 18px;
   font-weight: $thin;
 }
 
