--- a/_sass/news.scss
+++ b/_sass/news.scss
@@ -30,7 +30,7 @@
   text-align: justify;
 }
 
-.post p > a {
+.post a {
   text-decoration: underline;
 }
 
@@ -59,8 +59,4 @@
 
 .entry-body {
   margin-top: 20px;
-}
-
-.footer > p {
-  font-size: 10px;
 }
